--- a/Rural_FrontEnd/package.json
+++ b/Rural_FrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "projrct",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "axios": "^1.8.3",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^6.22.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -30,5 +35,9 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  }
+  },
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
