--- a/rural-net-backend/.env
+++ b/rural-net-backend/.env
@@ -1,5 +1,5 @@
-PORT=5000
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=your_mysql_password
-DB_NAME=rural_net
+DB_PASS=root
+DB_NAME=market
+DB_PORT=3306
